--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <script type="module">
         import Engine from "/engine/engine.js";
-        import * as GameScenes from "./scenes/game-scenes.js"
-        import * as GamePrefabs from "./prefabs/game-prefabs.js"
-        import * as GameComponents from "./components/game-components.js"
+        import * as GameScenes from "./game/scenes/game-scenes.js"
+        import * as GamePrefabs from "./game/prefabs/game-prefabs.js"
+        import * as GameComponents from "./game/components/game-components.js"
         
         //boot("MainScene", "gravity", {title:"Gravity"});
         let options = {
